# InferenceCI

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  LICENSE  PRD.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: internals.md
examples/: README.md  costdiff.yaml
examples/scenarios/: anthropic_single.py  multistep_agent.py  openai_single.py
src/inferenceci/: aggregate.py  cli.py  config_loader.py  diff.py  extractor.py  git_info.py  otel_setup.py  pricing.py  redact.py  runner.py
src/inferenceci/data/: costdiff.template.yaml  pricing.yaml  scenario.template.py
src/inferenceci/schemas/: __init__.py  config.py  pricing.py  report.py
tests/: test_aggregate.py  test_cli.py  test_compare_cli.py  test_config.py  test_diff.py  test_integration_stubbed.py  test_otel.py  test_pricing.py  test_runner.py
