[project]
name = "inferenceci"
version = "0.1.0"
description = "Cost Diff CI — bundlewatch for LLM cost. Replays scenarios in CI, posts cost diff on PRs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "InferenceLabs" }]
keywords = ["llm", "cost", "ci", "openai", "anthropic", "opentelemetry"]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1,<9",
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
    "rich>=13.7,<15",
    "httpx>=0.27,<1",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-semantic-conventions>=0.48b0",
    "opentelemetry-instrumentation-openai-v2>=2.0b0",
    "opentelemetry-instrumentation-anthropic>=0.33.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40,<2"]
anthropic = ["anthropic>=0.39,<1"]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<7",
    "ruff>=0.6,<1",
    "openai>=1.40,<2",
    "anthropic>=0.39,<1",
]

[project.scripts]
costdiff = "inferenceci.cli:main"

[project.urls]
Homepage = "https://github.com/raghavg27/InferenceCI"
Issues = "https://github.com/raghavg27/InferenceCI/issues"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inferenceci"]

[tool.hatch.build.targets.wheel.force-include]
"src/inferenceci/data/pricing.yaml" = "inferenceci/data/pricing.yaml"
"src/inferenceci/data/costdiff.template.yaml" = "inferenceci/data/costdiff.template.yaml"
"src/inferenceci/data/scenario.template.py" = "inferenceci/data/scenario.template.py"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning:opentelemetry.*",
    "ignore::DeprecationWarning:google.*",
]

[tool.coverage.run]
source = ["inferenceci"]
branch = true
